--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="header">
             <div class="logo-container">
                 <div class="synapse-logo">
-                <img src="logo.svg" alt="Synapse Logo" class="synapse-logo" />
+                <img src="assets\titlelogo.svg" alt="Synapse Logo" class="synapse-logo" />
                 </div>
             </div>
             <div class="user-greeting" id="userGreeting">Hello User</div>
