Popup exit functionality added

--- a/popup.html
+++ b/popup.html
@@ -16,5 +16,6 @@
     <input type="text" id="motive" placeholder="Type here…" />
     <button id="exit">EXIT</button>
   </div>
+  <script src="./popupRenderer.js"></script>
 </body>
 </html>
